--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   
 </head>
 <body>
-<section class="cid-qrDaErzpQ4" id="video2-5" data-rv-view="29">
+<section class="cid-qrDaErzpQ4" id="video2-5" data-rv-view="31">
 
     
     
     <figure class="mbr-figure align-center">
         <div class="video-block" style="width: 100%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/S-hdG0bVork?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=S-hdG0bVork" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/S-hdG0bVork?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
