--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-quVqFNkZe8" once="menu" id="menu1-25" data-rv-view="2125">
+<section class="menu cid-quVqFNkZe8" once="menu" id="menu1-25" data-rv-view="2494">
 
     
 
@@ -56,7 +56,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/i">build a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
