--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-quVqFNkZe8" once="menu" id="menu1-25" data-rv-view="2494">
+<section class="menu cid-quVqFNkZe8" once="menu" id="menu1-25" data-rv-view="315">
 
     
 
@@ -49,14 +49,14 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="webgr.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>ΑΡΧΙΚΗ</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="webgr.html#tabs3-w"><span class="mbri-briefcase mbr-iconfont mbr-iconfont-btn"></span>ΥΠΗΡΕΣΙΕΣ</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="webgr.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>ΔΕΙΓΜΑΤΑ&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="webgr.html">ΙΣΤΟΣΕΛΙΔΕΣ</a><a class="text-white dropdown-item display-4" href="page4.html#features3-2k">ESHOP</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="sales.html"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>ΠΡΟΣΦΟΡΕΣ&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="webgr.html#content1-24"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span>ΕΠΙΚΟΙΝΩΝΙΑ</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="webgr.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>ΑΡΧΙΚΗ</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="webgr.html#tabs3-w"><span class="mbri-briefcase mbr-iconfont mbr-iconfont-btn"></span>ΥΠΗΡΕΣΙΕΣ</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="webgr.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>ΔΕΙΓΜΑΤΑ&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="webgr.html">ΙΣΤΟΣΕΛΙΔΕΣ</a><a class="text-white dropdown-item display-4" href="page4.html">ESHOP</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="sales.html"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>ΠΡΟΣΦΟΡΕΣ&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="webgr.html#content1-24"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span>ΕΠΙΚΟΙΝΩΝΙΑ</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="tel:8006016"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>2108006016</a></div>
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/i">build a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
